      ancillary variables to compute adjustment factors.

    * src/object/o_list.c: Revise geda_object_list_scale to handle the
      case of text object types.

    * src/object/o_text_object.c: Add function geda_text_object_scale.

    * tests/test_line_object.c: Add check for geda_line_object_scale.

    * tests/test_math.c: Add check for geda_math_papersize_to_world.

2020-04-20 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_menu.c: Add function geda_iface_menu_return_icon,
      update geda_iface_menu_init documentation.

2020-03-27 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_menu.c: Update function documentation, add function
      geda_iface_menu_return_tooltip and reorganize module alphabetizing
      functions.

2020-03-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/geda/geda_pin.c: Add functions:

          * geda_pin_get_sequence
          * geda_pin_get_whichend

    * tests/test_object_list.c: Check scale pin in list.

    * tests/test_pin.c: Add function check_accessors and setup random
      coordinate assignments.

2020-03-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/geda/geda_pin.c: Reoganize module; arrange function in alphabetical
      order. Add todo documentation templates. Add function geda_pin_get_number.

    * tests/test_line_object.c: Revise check_line_object_modify to modify
      the line to the on-entry position before returning. Add checks for
      geda_line_object_rotate.

    * tests/test_math.c: Check geda_math_degrees_to_radians with 180 degrees.
      Add additional checks for geda_math_distance.

2020-02-20 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_list.c: Revise geda_object_list_scale to handle the
      case of picture object types.

    * src/object/o_picture_object.c: Validate GedaObject in function
      geda_picture_object_get_height. Add todo documentation template.
      Add functions:

          * geda_picture_object_get_lower_x
          * geda_picture_object_get_lower_y