@@ -12,6 +12,8 @@
 
     * tests/test_math.c: Add check for geda_math_papersize_to_world.
 
+    * tests/test_object_list.c: Check scale text in list.
+
 2020-04-20 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/iface/i_menu.c: Add function geda_iface_menu_return_icon,
